--- a/backend/templates/pages/dashboard_history_data.html
+++ b/backend/templates/pages/dashboard_history_data.html
@@ -4,7 +4,7 @@
 {% extends "base.html" %}
 {% endif %}
 
-{% block title %}Query Data - Unistore Benchmark{% endblock %}
+{% block title %}Query Data - FlakeBench{% endblock %}
 
 {% block content %}
 <div
