--- a/backend/templates/pages/history_compare.html
+++ b/backend/templates/pages/history_compare.html
@@ -4,7 +4,7 @@
 {% extends "base.html" %}
 {% endif %}
 
-{% block title %}Deep Compare - Unistore Benchmark{% endblock %}
+{% block title %}Deep Compare - FlakeBench{% endblock %}
 
 {% block content %}
 <div x-data="compareDetail()" data-test-ids="{{ (ids or []) | join(',') }}">
