--- a/backend/templates/pages/templates.html
+++ b/backend/templates/pages/templates.html
@@ -4,7 +4,7 @@
 {% extends "base.html" %}
 {% endif %}
 
-{% block title %}Templates - Unistore Benchmark{% endblock %}
+{% block title %}Templates - FlakeBench{% endblock %}
 
 {% block content %}
 <div x-data="templatesManager()">
