--- a/backend/templates/pages/comparison.html
+++ b/backend/templates/pages/comparison.html
@@ -4,7 +4,7 @@
 {% extends "base.html" %}
 {% endif %}
 
-{% block title %}Compare Results - Unistore Benchmark{% endblock %}
+{% block title %}Compare Results - FlakeBench{% endblock %}
 
 {% block content %}
 <div x-data="comparison()">
