--- a/backend/templates/pages/dashboard_history.html
+++ b/backend/templates/pages/dashboard_history.html
@@ -4,7 +4,7 @@
 {% extends "base.html" %}
 {% endif %}
 
-{% block title %}Dashboard History - Unistore Benchmark{% endblock %}
+{% block title %}Dashboard History - FlakeBench{% endblock %}
 
 {% block content %}
 <div x-data="dashboard({ mode: 'history' })" data-test-id="{{ test_id or '' }}"
