--- a/backend/templates/pages/history.html
+++ b/backend/templates/pages/history.html
@@ -4,7 +4,7 @@
 {% extends "base.html" %}
 {% endif %}
 
-{% block title %}Test History - Unistore Benchmark{% endblock %}
+{% block title %}Test History - FlakeBench{% endblock %}
 
 {% block content %}
 <div x-data="testHistory()">
